--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Triptico Monopoly</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
   </head>
   <body>   
@@ -32,5 +31,8 @@
           <h3>Ahora</h3>
            <p>Con los años la finalidad del juego cambio para solo disfrutar un buen rato, negociando propiedades y hasta haciendo uso de medios electronicos para todas las transacciones que requiere el juego</p>
              <img src="monopoly_nuevo.jpg" class="monopoly-2">
+       </div>
+       <div class="informacion">
+       <h3>Con informacion de Grafica.info.cultura visual</h3>
        </div>
      </div>
